Refactor to subpackages

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+YelpConsumerKey = "0c93v_N2yHH1ZxUUVt0_zQ"
+YelpConsumerSecret = "fOtwwU6aR0i2SbHsigWmeJW9mr0"
+YelpToken = "Qfmz_Pwxu3Ys6yra_vZAaU0c4P03w6WW"
+YelpTokenSecret = "FWHctyPy91L2QxECBuS8mgL_ahM"
